feat: initial version

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,5 +1,14 @@
 [mod-name]
-title=YOUR MOD TITLE
+title=Nobelium science
 
 [mod-description]
-description=YOUR MOD DESCRIPTION
+description=Split the atom- I mean, promethium science
+
+[item-name]
+nobelium-science-pack=Nobelium science pack
+
+[technology-name]
+nobelium-science-pack=Nobelium science pack
+
+[technology-description]
+nobelium-science-pack=Congratulation on conquering them all!
